--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,10 +41,10 @@ body {
     @apply border-border;
   }
   body {
-    @apply h-full bg-background text-foreground;
+    @apply h-dvh bg-background text-foreground;
   }
 
   html {
-    @apply h-full;
+    @apply h-dvh;
   }
 }
